--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,88 @@
 body{
-    background-color: antiquewhite;
+    background-image: url('./img/bacgground.png');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: repeat;
+    height: 100vh; 
+    margin: 0; 
+    background-color: rgba(0, 0, 0, 0.4);
+    background-blend-mode: multiply; 
+
 }
-.data {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+
+a {
+    direction: none;
+    color: antiquewhite;
 }
 
 .hidden{
     display: none;
 }
 
-nav {
-    display: flex;
-    width: 200px;
-    flex-direction: column;
-    gap: 10px;
-    border-right: dashed 1px gray;
-    height: 100%;
-}
-
-.main {
+.main, nav {
     display: flex;
 }
 
 ul {
     list-style: none;
     display: flex;
-    flex-direction: column;
     gap: 10px;
-   
-}
-li:hover{
-    background-color: rgb(197, 157, 157);
-
 }
 
+li div {
+   background-color: rgb(24, 59, 90);
+   border-radius: 5px;
+   padding: 8px;
+   font-size: 18px;
+   border: 1px solid antiquewhite;
+    
+}
+li div:hover{
+    background-color: rgb(161, 35, 35);
+    cursor: pointer;
+}
 
-header {
+header, footer {
+
     display: flex;
     justify-content: center;
     width: 100%;
-    border: black dashed 1px;
-    height:50px;
+    height:58px;
     align-items: center;
     font-size: 2rem;
-    background-color: whitesmoke;
+    background-color: rgb(21, 36, 48);
+    color: antiquewhite;
+    gap: 100px;
+    align-items: center;
 }
 
 .content, .container_content {
     margin-top: 10px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 6px;
     padding-left: 10px;
     min-width: 600px;
+    opacity: 97%;
+}
+
+.item{
+    width: 100%;
+}
+
+.container_content, .item{
+    border-radius: 20px;
+}
+
+.content {
+    width: 50%;
+    min-height: 765px;
 }
 
 .item {
-    background-color: gainsboro;
     height: auto;
+    background-color: rgb(21, 36, 48);
+    color: whitesmoke;
 }
 
 .mainDiv {
@@ -74,11 +97,89 @@ header {
     display: flex;
     justify-content: space-between;
 }
+
 .pagination_pages{
     display: flex;
     gap: 5px;
+    color: whitesmoke;
 }
+
 .pagination_page:hover{
     cursor: pointer;
-    color: blue;
+    color: rgb(68, 206, 149);
 }
+
+.auxflex {
+    display: flex;  
+    gap:  20px;
+    border-radius: 20px;
+    padding: 20px;
+    opacity: 97%;
+    font-size: 20px;
+    line-height: 24px;
+    justify-content: space-around;
+}
+.descriprion {
+    margin-top: 20px;
+    padding: 10px;
+    padding-left: 20px;
+    max-width: 100%;
+    display: flex;  
+    flex-direction: column;
+    height: auto;
+    background-color: rgb(21, 36, 48);
+    color: whitesmoke;
+    display: flex;  
+    gap:  20px;
+    border-radius: 20px;
+    padding: 20px;
+    opacity: 97%;
+    font-size: 20px;
+    line-height: 24px;     
+        
+    
+}
+.desc{
+    display: flex;
+    max-width: 55%;
+}
+
+.desc_img {
+    max-width: 100%;  
+    max-height: 100%; 
+    height: auto;   
+    object-fit: contain; 
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1); 
+    border-radius: 20px;
+}
+
+footer {
+  font-size: 1rem;
+  justify-content: space-around;
+}
+
+.ankor {
+    max-width: 50px;
+    height: auto;
+    opacity: 60%;
+    z-index: 2;
+}
+
+
+.up{
+    position: absolute;
+    /* bottom: 10px; */
+    left: 10px;
+}
+
+.down {
+    position: absolute;
+    top: 5px;
+    left: 10px;
+}
+
+.ankor:hover {
+    opacity: 100%;
+    cursor: pointer;
+}
+
